--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@
 #container section{
     width: 998px;
     height: 614px;
-    background-color: rgba(235, 235, 235, 0.6);
+    background-color: rgba(235, 235, 235);
 }
 .user-image{
     width: 392px;
@@ -53,19 +53,23 @@
         align-items: center;
     }
     #container section{
-        width: 100%;
-        height: 300px;
+        width: 80%;
+        height: 350px;
+        background-color: rgba(235, 235, 235, 0.7);
+        display: flex;
+        align-items: center;
     }
     .user-image{
         width: 100px;
         height: 133px;
-        margin-top: 80px;
+        margin-top: 0px;
+        margin-left: 20px;
     }
     .profile{
         margin-top: 0px;
-        margin-left: 0px;
-        width: 100%;
-        height: 300px;
+        margin-left: 130px;
+        width: 200px;
+        height: 350px;
         display: flex;
         align-items: center;
         justify-content: flex-end;
@@ -77,8 +81,6 @@
         height: 280px;
     }
     .profile li{
-        margin: 0;
-        list-style: none;
         font-size: 1rem;
     }
     .icon-margin img{
