--- a/css/nav.css
+++ b/css/nav.css
@@ -1,26 +1,20 @@
 @import url('./font.css');
-body{
+* {
     margin: 0;
 }
-nav{
+.nav-lists {
     background-color: rgb(235, 235, 235);
     font-size: 1rem;
-}
-nav ul{
-    padding: 0;
-    margin: 0;
-    height: 118px;
+    height: 10vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-}
-nav li{
     list-style: none;
 }
-nav a:hover{
-    color: gray;
-}
-nav a{
+.nav-lists a{
     text-decoration: none;
     color: black;
+}
+.nav-lists a:hover{
+    color: gray;
 }
