--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,10 @@
 @import url('./font.css');
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 footer {
     height: 15vh;
     background-color: rgb(235, 235, 235);
@@ -10,13 +15,20 @@ footer {
 }
 
 .footer-lists {
-    width: 50%;
-    margin: 0 auto;
     list-style: none;
-    display: flex;
-    justify-content: space-around;
+}
+
+.footer-lists h4 {
+    display: inline-block;
+    margin-right: 10px;
 }
 
 .copy {
     margin-top: 20px;
+}
+
+@media (max-width:1024px) {
+    .footer-lists {
+        width: 40%;
+    }
 }
