--- a/css/index.css
+++ b/css/index.css
@@ -1,95 +1,90 @@
 @import url('./font.css');
-#container{
-    height: 713px;
-    background-color: rgb(226, 94, 101);
+* {
+    margin: 0;
+}
+
+main {
+    height: 75vh;
+    background-color: rgb(235, 123, 144);
     display: flex;
     align-items: flex-end;
     justify-content: center;
 }
 
-#container section{
-    width: 998px;
-    height: 614px;
-    background-color: rgba(235, 235, 235);
+.profile {
+    background-color: rgb(235, 235, 235);
+    width: 60%;
+    height: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
-.user-image{
-    width: 392px;
-    height: 521px;
-    margin-top: 58px;
-    margin-left: 54px;
-    position: absolute;
+
+.user-image {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
 }
-.profile{
-    position: absolute;
-    margin-top: 82px;
-    margin-left: 547px;
-    width: 451px;
-    height: 477px;
+.user-image img {
+    width: 250px;
 }
-.profile ul{
-    margin: 0;
-    padding: 0;
-    width: 392px;
-    height: 521px;
+
+.profile-lists {
+    height: 55%;
+    list-style: none;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    font-size: 1.2rem;
 }
-.profile li{
-    margin: 0;
-    list-style: none;
-    font-size: 1.5rem;
+
+.profile-lists h1 {
+    font-size: 2rem;
+    font-weight: 500;
 }
-.icon-margin img{
-    margin-right: 15px;
+
+.profile-lists h3 {
+    font-weight: 500;
 }
-.name{
-    display: inline;
-    font-size: 3rem;
+
+.sns-icon img {
+    width: 40px;
+    margin-right: 10px;
+    margin-top: 5px;
 }
-@media(max-width:768px) {
-    #container {
-        height: 500px;
-        align-items: center;
+
+@media (max-width: 1024px) {
+    .profile {
+        width: 70%;
     }
-    #container section{
-        width: 80%;
-        height: 350px;
-        background-color: rgba(235, 235, 235, 0.7);
-        display: flex;
-        align-items: center;
-    }
-    .user-image{
-        width: 100px;
-        height: 133px;
-        margin-top: 0px;
+}
+
+@media (max-width: 768px) {
+    .user-image img {
+        width: 130px;
         margin-left: 20px;
     }
-    .profile{
-        margin-top: 0px;
-        margin-left: 130px;
-        width: 200px;
-        height: 350px;
-        display: flex;
+    main {
         align-items: center;
-        justify-content: flex-end;
     }
-    .profile ul{
-        margin-top: 10px;
-        text-align: center;
-        width: 250px;
-        height: 280px;
+    .profile {
+        background-color: rgba(235, 235, 235, 0.6);
+        width: 100%;
+        height: 80%;
+        box-shadow: 0px 4px 6px 1px rgba(104, 78, 81, 0.4);
     }
-    .profile li{
+    .profile-lists {
+        height: 55%;
         font-size: 1rem;
+        margin-left: 20px;
     }
-    .icon-margin img{
+    .profile-lists h1 {
+        font-size: 1.6rem;
+        font-weight: 500;
+    }
+    .sns-icon img {
         width: 30px;
-        height: 30px;
-        margin-right: 10px;
-    }
-    .name{
-        display: inline;
-        font-size: 1.5rem;
+        margin-right: 5px;
     }
 }
