--- a/css/resume.css
+++ b/css/resume.css
@@ -1,45 +1,35 @@
 @import url('./font.css');
-#container{
-    height: 713px;
-    background-color: rgb(226, 94, 101);
+main{
+    height: 75vh;
+    background-color: rgb(235, 123, 144);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#container #resume{
+#resume{
     color: white;
     font-size: 1.5rem;
 }
-#resume ul{
-    margin: 0;
+.resume-lists {
     padding: 50px;
-    height: 613px;
+    height: 60vh;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-content: space-around;
     flex-wrap: wrap;
 }
-#resume li{
+.resume-lists li{
     list-style: none;
     height: 70px;
 }
-#resume h3{
+.resume-lists h3{
     color: white;
-    font-weight: bold;
+    font-weight: 600;
 }
 @media(max-width:768px){
-    #container{
-        height: 600px;
-    }
-    #container #resume{
+    #resume{
         font-size: 1.2rem;
-    }
-    #resume ul{
-        padding: 50px;
-        height: 500px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-content: space-around;
-        flex-wrap: wrap;
     }
 }
