--- a/css/project.css
+++ b/css/project.css
@@ -1,29 +1,33 @@
 @import url('./font.css');
-#container{
-    padding: 20px;
-    background-color: rgb(226, 94, 101);
+
+main {
+    background-color: rgb(235, 123, 144);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-content: space-around;
+    min-height: 75vh;
 }
-#container article{
-    width: 400px;
-    height: 516px;
+
+.project {
     background-color: rgba(235, 235, 235, 0.8);
-    margin: 25px;
+    margin: 50px;
+    width: 320px;
+    height: 420px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-#container article:hover{
-    box-shadow: 2px 2px 7px 5px rgb(156, 91, 91);
+.project:hover {
+    box-shadow: 2px 2px 7px 5px rgb(185, 103, 123);
 }
-.project{
-    padding: 30px;
-    text-align: center;
+
+.project img {
+    width: 250px;
+    height: 230px;
 }
-.img-size{
-    width: 340px;
-    height: 315px;
-}
+
 h2{
     margin: 0;
     margin-top: 50px;
