--- a/css/nav.css
+++ b/css/nav.css
@@ -2,10 +2,21 @@
 * {
     margin: 0;
 }
-.nav-lists {
+nav {
     background-color: rgb(235, 235, 235);
-    font-size: 1rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     height: 10vh;
+}
+.logo {
+    width: 30vw;
+    display: flex;
+    justify-content: center;
+}
+.nav-lists {
+    font-size: 1rem;
+    width: 70vw;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -17,4 +28,41 @@
 }
 .nav-lists a:hover{
     color: gray;
+}
+
+.burger {
+    display: none;
+}
+
+.burger div{
+    background-color: rgb(122, 122, 122);
+    width: 25px;
+    height: 4px;
+    margin-bottom: 3px;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    body {
+        overflow-x: hidden;
+    }
+    .burger {
+        display: block;
+    }
+    .nav-lists {
+        position: absolute;
+        flex-direction: column;
+        top: 10vh;
+        height: 75vh;
+        right: 0;
+        width: 60%;
+        background-color: rgb(235, 235, 235);
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    }
+}
+
+.nav-active {
+    transform: translateX(0%);
 }
