--- a/css/nav.css
+++ b/css/nav.css
@@ -44,10 +44,15 @@ nav {
 }
 
 @media (max-width: 768px) {
-    body {
-        overflow-x: hidden;
+    nav {
         width: 100%;
         position: fixed;
+    }
+    body {
+        overflow-x: hidden;
+    }
+    main {
+        padding-top: 10vh;
     }
     .burger {
         display: block;
@@ -56,7 +61,7 @@ nav {
         position: absolute;
         flex-direction: column;
         top: 10vh;
-        height: 75vh;
+        height: 90vh;
         right: 0;
         width: 60%;
         background-color: rgb(235, 235, 235);
