--- a/css/nav.css
+++ b/css/nav.css
@@ -41,6 +41,7 @@ nav {
     margin-bottom: 3px;
     border-radius: 2px;
     cursor: pointer;
+    transition: all 0.3s ease;
 }
 
 @media (max-width: 768px) {
