--- a/css/nav.css
+++ b/css/nav.css
@@ -14,6 +14,10 @@ nav {
     display: flex;
     justify-content: center;
 }
+.logo a{
+    text-decoration: none;
+    color: rgb(54, 54, 54);
+}
 .nav-lists {
     font-size: 1rem;
     width: 70vw;
