--- a/css/index.css
+++ b/css/index.css
@@ -49,10 +49,13 @@ main {
     font-weight: 500;
 }
 
-.sns-icon img {
-    width: 40px;
-    margin-right: 10px;
-    margin-top: 5px;
+.sns a {
+    font-size: 2rem;
+    text-decoration: none;
+    color: black;
+}
+.sns {
+    margin-top: 10px;
 }
 
 @media (max-width: 1024px) {
@@ -85,8 +88,12 @@ main {
         font-size: 1.4rem;
         font-weight: 500;
     }
-    .sns-icon img {
-        width: 30px;
-        margin-right: 5px;
+    .sns a {
+        font-size: 1.3rem;
+        text-decoration: none;
+        color: black;
+    }
+    .sns {
+        margin-top: 5px;
     }
 }
