--- a/css/footer.css
+++ b/css/footer.css
@@ -7,11 +7,12 @@
 
 footer {
     height: 15vh;
-    background-color: rgb(235, 235, 235);
+    background-color: #373B44;
     display: flex;
     flex-direction: column;
     text-align: center;
     justify-content: center;
+    color: #656b7a;
 }
 
 .footer-lists {
