--- a/css/resume.css
+++ b/css/resume.css
@@ -1,14 +1,16 @@
 @import url('./font.css');
 main{
     height: 75vh;
-    background-color: rgb(235, 123, 144);
+    background: #141E30;
+    background: -webkit-linear-gradient(to top, #243B55, #141E30);
+    background: linear-gradient(to top, #243B55, #141E30);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 #resume{
-    color: white;
+    color: rgb(153, 153, 153);
     font-size: 1.5rem;
 }
 .resume-lists {
@@ -25,7 +27,7 @@ main{
     height: 70px;
 }
 .resume-lists h3{
-    color: white;
+    color: rgb(184, 184, 184);
     font-weight: 600;
 }
 @media(max-width:768px){
