--- a/css/font.css
+++ b/css/font.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/earlyaccess/jejugothic.css);
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,600&display=swap');
 * {
-    font-family: 'Jeju Gothic', serif;
+    font-family: 'Poppins', sans-serif;
 }
