--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import url('./font.css');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR:500&display=swap&subset=korean');
 * {
     margin: 0;
 }
@@ -14,22 +14,82 @@ main {
 }
 
 .profile {
-    color: rgb(214, 214, 214);
-    font-size: 3rem;
+    width: 40vw;
+    height: 45vh;
+    margin-top: 10vh;
+    background-color: #243B55;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
-.profile h1 {
-    font-size: 5rem;
+.user-img {
+    width: 100vw;
+    position: absolute;
+    top: 20vh;
+    left: 0;
+    display: flex;
+    justify-content: center;
+}
+.user-img img {
+    width: 180px;
+    height: 180px;
+    border-radius: 100px;
+    opacity: 90%;
+}
+
+.profile-lists {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    height: 30vh;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    margin-bottom: 30px;
+    color: rgb(209, 209, 209);
+}
+
+.profile-lists li {
+    font-family: 'Noto Sans KR', sans-serif;
+}
+
+.profile-lists h1,
+.profile-lists h4 {
     font-weight: 500;
-    margin-bottom: 20px;
+    font-family: 'Noto Sans KR', sans-serif;
+}
+
+.sns{
+    font-size: 1.5rem;
+    margin-top: 5px;
+}
+.sns a {
+    color: rgb(209, 209, 209);
+    text-decoration: none;
+}
+
+@media (max-width: 1024px) {
+    .profile {
+        width: 50vw;
+    }
 }
 
 @media (max-width: 768px) {
     .profile {
-        font-size: 2rem;
+        width: 70vw;
+        height: 45vh;
+        margin-top: 5vh;
+        box-shadow: 8px 8px 7px 3px rgba(26, 43, 63, 0.7);
     }
-    
-    .profile h1 {
-        font-size: 3rem;
+    .user-img {
+        top: 23vh;
+    }
+    .user-img img {
+        width: 100px;
+        height: 100px;
+    }
+    .profile-lists {
+        font-size: 0.8rem;
     }
 }
