--- a/css/footer.css
+++ b/css/footer.css
@@ -7,7 +7,7 @@
 
 footer {
     height: 15vh;
-    background-color: #373B44;
+    background-color: rgb(23, 25, 29);
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -22,6 +22,7 @@ footer {
 .footer-lists h4 {
     display: inline-block;
     margin-right: 10px;
+    color: rgb(143, 115, 38);
 }
 
 .copy {
