--- a/css/nav.css
+++ b/css/nav.css
@@ -35,6 +35,15 @@ nav {
     color: gray;
 }
 
+.icon-moon-inv,
+.icon-moon {
+    font-size: 2.5rem;
+    cursor: pointer;
+}
+.icon-moon-inv {
+    color: rgb(81, 119, 160);
+}
+
 .burger {
     display: none;
 }
