--- a/fontello/css/fontello-codes.css
+++ b/fontello/css/fontello-codes.css
@@ -1,3 +1,5 @@
 
 .icon-facebook-circled:before { content: '\e800'; } /* '' */
+.icon-moon:before { content: '\e801'; } /* '' */
+.icon-moon-inv:before { content: '\e802'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
