--- a/fontello/css/fontello.css
+++ b/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?85221901');
-  src: url('../font/fontello.eot?85221901#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?85221901') format('woff2'),
-       url('../font/fontello.woff?85221901') format('woff'),
-       url('../font/fontello.ttf?85221901') format('truetype'),
-       url('../font/fontello.svg?85221901#fontello') format('svg');
+  src: url('../font/fontello.eot?48403196');
+  src: url('../font/fontello.eot?48403196#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?48403196') format('woff2'),
+       url('../font/fontello.woff?48403196') format('woff'),
+       url('../font/fontello.ttf?48403196') format('truetype'),
+       url('../font/fontello.svg?48403196#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?85221901#fontello') format('svg');
+    src: url('../font/fontello.svg?48403196#fontello') format('svg');
   }
 }
 */
@@ -29,6 +29,7 @@
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
+  margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
  
@@ -38,6 +39,10 @@
  
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
+ 
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
  
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
@@ -51,4 +56,6 @@
 }
  
 .icon-facebook-circled:before { content: '\e800'; } /* '' */
+.icon-moon:before { content: '\e801'; } /* '' */
+.icon-moon-inv:before { content: '\e802'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
