--- a/fontello/css/fontello.css
+++ b/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?48403196');
-  src: url('../font/fontello.eot?48403196#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?48403196') format('woff2'),
-       url('../font/fontello.woff?48403196') format('woff'),
-       url('../font/fontello.ttf?48403196') format('truetype'),
-       url('../font/fontello.svg?48403196#fontello') format('svg');
+  src: url('../font/fontello.eot?58189383');
+  src: url('../font/fontello.eot?58189383#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?58189383') format('woff2'),
+       url('../font/fontello.woff?58189383') format('woff'),
+       url('../font/fontello.ttf?58189383') format('truetype'),
+       url('../font/fontello.svg?58189383#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?48403196#fontello') format('svg');
+    src: url('../font/fontello.svg?58189383#fontello') format('svg');
   }
 }
 */
@@ -58,4 +58,8 @@
 .icon-facebook-circled:before { content: '\e800'; } /* '' */
 .icon-moon:before { content: '\e801'; } /* '' */
 .icon-moon-inv:before { content: '\e802'; } /* '' */
+.icon-left-open:before { content: '\e803'; } /* '' */
+.icon-right-open:before { content: '\e804'; } /* '' */
+.icon-circle-empty:before { content: '\f10c'; } /* '' */
+.icon-circle:before { content: '\f111'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
