--- a/css/detail.css
+++ b/css/detail.css
@@ -59,6 +59,12 @@ section {
     text-align: justify;
 }
 
+.details p {
+    font-size: 0.8rem;
+    font-family: 'Noto Sans KR', sans-serif;
+    margin-top: 10px;
+}
+
 .details h1 {
     font-size: 1.2rem;
     margin-bottom: 20px;
