--- a/css/nav.css
+++ b/css/nav.css
@@ -61,6 +61,46 @@ nav {
     transition: all 0.3s ease;
 }
 
+.dropdown {
+    z-index: 1;
+    list-style: none;
+    position: absolute;
+    top: 10vh;
+    width: 200px;
+    height: 170px;
+    background-color: rgb(81, 119, 160);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-20px);
+    transition: all 0.4s ease;
+}
+.dropdown li {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.dropdown li:hover {
+    background-color: rgb(47, 50, 59);
+}
+.dropdown li:hover > a {
+    color: rgb(81, 119, 160);
+}
+.dropdown a {
+    color: rgb(34, 36, 41);
+}
+
+.dropdown-active {
+    opacity: 1;
+    pointer-events: all;
+    transform: translateY(0px);
+}
+
 @media (max-width: 1024px) {
     .logo {
         width: 40vw;
@@ -94,6 +134,13 @@ nav {
         background-color: rgb(34, 36, 41);
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
+    }
+    .dropdown {
+        position: absolute;
+        top: auto;
+        margin-top: 20px;
+        left: 5%;
+        width: 90%;
     }
 }
 
